# q3logs2kafka

./: .gitignore  .style.yapf  README.md  env  pyproject.toml  requirements.txt  setup.py
q3logs2kafka/: core.py  main.py
src/event_producer/: main.py
src/q3logs_reader/: core.py  main.py
